--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,6 +27,7 @@
 {{ include.code }}
 
   <footer class="site-footer">
+    Copyright © 2020 Sample CNN with PyTorch
   </footer>
 </main>
   </body>
