--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,8 +19,17 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
-  {{include._data.navigation.yml}}
+
   <body>
+    <div class="page-content">
+      <div id="left-side">
+        {{ content | toc_generate }}
+      </div>
+      <p>here</p>
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
 
     <main id="content" class="main-content" role="main">
    {{ content }}
