--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,10 +31,10 @@
       </div>
     </div>
 
-    <main id="content" class="main-content" role="main">
+    <!-- <main id="content" class="main-content" role="main">
    {{ content }}
    {{ include.lang }}
-{{ include.code }}
+{{ include.code }} -->
 
   <footer class="site-footer">
     Copyright © 2020 Sample CNN with PyTorch
