--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,18 +23,15 @@
   <body>
     <div class="page-content">
       <div id="left-side">
-        {{ content | toc_generate }}
+        {:toc}
       </div>
-      <p>here</p>
-      <div class="wrapper">
-        {{ content }}
-      </div>
+   
     </div>
 
-    <!-- <main id="content" class="main-content" role="main">
+    <main id="content" class="main-content" role="main">
    {{ content }}
    {{ include.lang }}
-{{ include.code }} -->
+{{ include.code }}
 
   <footer class="site-footer">
     Copyright © 2020 Sample CNN with PyTorch
