--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -29,7 +29,7 @@
     </div>
 
     <main id="content" class="main-content" role="main">
-   {{ content }}
+      {{ content | toc_generate }}
    {{ include.lang }}
 {{ include.code }}
 
