--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,7 +23,8 @@
   <body>
     <div class="page-content">
       <div id="left-side">
-        {{ toc }}
+        * auto-gen TOC:
+        {:toc}
       </div>
    
     </div>
