--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
 
   <body>
     <main id="content" class="main-content" role="main">
-      {{ content | toc_generate }}
+      {{ content }}
    {{ include.lang }}
 {{ include.code }}
 
