--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,6 +22,10 @@
   </head>
 
   <body>
+    <div class="sidenav"  markdown="1">
+      * toc
+      {:toc}
+      </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
    {{ include.lang }}
